# SiEPIC_testcreator

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  sequencecreator.py  setup.py  test.yaml  yamlcheck.py
.github/workflows/: run-code-tests.yml
DreamCreator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
File_edits/: coordinate_file_edits.txt
app/: README.md
app/DreamCreator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/SiEPIC_TestCreator/: __main__.py  config.py  run_gui_for_debugging.py  sequencecreator.py  sequencetracker.py  yamlcheck.py
app/SiEPIC_TestCreator/tests/: test_sequencecreator.py  test_sequencetracker.py  test_yaml.py
app/dreamcreator/: sequencecreator.py  yamlcheck.py
app/dreamcreator/sequences/: __init__.py  (+6 more)
app/siepic_testcreator/: __init__.py  run_gui_for_debugging.py  sequencecreator.py  yamlcheck.py
dreamcreator/: DreamCreator.bat  sequencecreator.py  sequencecreatorvariables.py
dreamcreator/File_edits/: coordinate_file_edits.txt
dreamcreator/sequences/: current_sweep.py  current_sweep_ida.py  set_current_wavelength_sweep.py  set_current_wavelength_sweep_ida.py  set_voltage_wavelength_sweep.py  set_voltage_wavelength_sweep_ida.py  set_wavelength_current_sweep.py  set_wavelength_current_sweep_ida.py  set_wavelength_voltage_sweep_ida.py  voltage_sweep.py  voltage_sweep_ida.py  wavelength_sweep.py  wavelength_sweep_ida.py
example/: run_gui.py
readme_images/: README.md
sequences/: set_wavelength_voltage_sweep.py  voltage_sweep.py
sequences/core/: sequence.py
tests/: __init__.py
(+59 files in other folders)
